# internal/mods/rbac/schema/menu_resource.go
@@ -9,12 +9,12 @@ import (
 
 // Menu resource management for RBAC
 type MenuResource struct {
-	ID        string    `json:"id" gorm:"size:20;primarykey"` // Unique ID
-	MenuID    string    `json:"menu_id" gorm:"size:20;index"` // From Menu.ID
-	Method    string    `json:"method" gorm:"size:20;"`       // HTTP method
-	Path      string    `json:"path" gorm:"size:255;"`        // API request path (e.g. /api/v1/users/:id)
-	CreatedAt time.Time `json:"created_at" gorm:"type:timestamp;autoCreateTime;"` // Create time
-	UpdatedAt time.Time `json:"updated_at" gorm:"type:timestamp;autoUpdateTime;"` // Update time
+	ID        string    `json:"id" gorm:"type:varchar(20);primaryKey;comment:ID;"`
+	MenuID    string    `json:"menu_id" gorm:"type:varchar(20);default:null;index:idx_menu_resource_menu_id;comment:菜单ID;"`
+	Method    string    `json:"method" gorm:"type:varchar(20);default:null;comment:请求方法;"`
+	Path      string    `json:"path" gorm:"type:varchar(255);default:null;comment:请求路径;"`
+	CreatedAt time.Time `json:"created_at" gorm:"type:datetime(3);default:null;autoCreateTime;comment:创建时间;"`
+	UpdatedAt time.Time `json:"updated_at" gorm:"type:datetime(3);default:null;autoUpdateTime;comment:更新时间;"`
 }
 
 func (a *MenuResource) TableName() string {
